# sysvex

./: .gitignore  LICENSE  MANIFEST.in  README.MD  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
src/sysvex/: cli.py
src/sysvex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/sysvex/engine/: loader.py  models.py  runner.py
src/sysvex/modules/: base.py  filesystem.py  network.py  processes.py
src/sysvex/reporting/: console.py  file_reports.py  json_report.py
src/sysvex/utils/: filters.py  platform.py  system.py
