[project]
name = "sysvex"
version = "0.1.0"
description = "Modular system security auditing toolkit"
authors = [
    { name = "PuRIToX" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "psutil"
]
keywords = ["security", "auditing", "system", "forensics", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring"
]

[project.urls]
Homepage = "https://github.com/PuRiToX/sysvex"
Repository = "https://github.com/PuRiToX/sysvex"
Documentation = "https://github.com/PuRiToX/sysvex#readme"
"Bug Tracker" = "https://github.com/PuRiToX/sysvex/issues"

[project.scripts]
sysvex = "sysvex.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"