[project]
name = "sysvex"
version = "0.1.3"
description = "Modular system security auditing toolkit"
authors = [
    { name = "PuRiToX" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "psutil"
]
keywords = ["security", "auditing", "system", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring"
]

[project.urls]
Homepage = "https://github.com/PuRiToX/sysvex"
Repository = "https://github.com/PuRiToX/sysvex"
Documentation = "https://github.com/PuRiToX/sysvex#readme"
"Bug Tracker" = "https://github.com/PuRiToX/sysvex/issues"

[project.scripts]
sysvex = "sysvex.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
